# archive

./: .clang-format  .eslintrc.js  .gitattributes  .gitignore  MODULE.bazel  PRESUBMIT.json  README.md  WORKSPACE  generate-compile-commands-json.sh  package-lock.json  presubmit
apps/client/lazel/: Cargo.toml  README.md  lazel.rs
apps/client/lazel/bazel/: command.rs  flag.rs  label.rs  mod.rs  scope.rs  target.rs
apps/client/lazel/ui/: actions.rs  assets.rs  button.rs  checkbox.rs  collapse.rs  dropdown.rs  edit_command.rs  frame.rs  h_split.rs  menu.rs  mod.rs  presets.rs  ui.rs
blog/: 10-ways-brands-and-marketers-are-using-the-power-of-web-ar-to-spread-holiday-cheer-this-season.html  19-crimes-snoop-cali-red-lets-you-ask-a-holographic-snoop-dog-anything.html  20th-century-studios-brings-avatar-the-way-of-water-fans-into-the-oceans-of-pandora-using-webar.html  3-tips-for-creating-amazing-webar-experiences-with-sky-effects.html  3-webar-tools-you-can-use-today-to-social-distance-safely.html  4-mind-boggling-webar-experiments-that-push-the-bounds-of-physics-and-tech.html  5-tips-for-developers-to-make-any-8th-wall-webar-project-more-realistic.html  8i-and-8th-wall-unlock-livestreaming-holograms-in-webar.html  8th-wall-agent-is-coming.html  8th-wall-developers-get-new-superpowers-with-powerful-new-cloud-editor-features.html  8th-wall-experiences-nominated-for-12-auggie-awards-at-awe-usa-2025.html  8th-wall-is-joining-niantic.html  8th-wall-named-a-finalist-for-2020-sxsw-innovation-awards.html  8th-wall-niantic-a-year-to-remember.html  8th-wall-now-works-across-all-major-ios-apps-including-instagram-snapchat-and-more.html  8th-wall-open-source.html  8th-wall-powered-webar-experiences-are-winning-awards-this-season.html  8th-wall-powered-webar-experiences-nominated-for-24-auggie-awards-across-6-categories.html  8th-wall-recognized-by-fast-company-as-one-of-the-worlds-most-innovative-companies.html  8th-wall-simulator.html  8th-wall-update-engine-distribution-and-open-source-plans.html  8th-wall-webar-experiences-nominated-for-17-auggie-awards.html  a-week-in-webar-2020-auggie-awards-edition.html  a-week-in-webar-ally-monopoly-transform-cities-into-a-live-board-game-and-adidas-surprises-commuters.html  a-week-in-webar-automotive-edition.html  a-week-in-webar-b2b-edition.html  a-week-in-webar-celebrity-edition-snoop-dogg-sam-smith-rita-ora-craig-david.html  a-week-in-webar-entertainment-edition-jumanji-and-game-of-thrones.html  a-week-in-webar-fashion-edition-vogue-dior-khaite-mulberry-and-more.html  a-week-in-webar-halloween-2020-edition-nextdoor-ferrara-ghostbusters-mcdonalds-and-ricolino-candy.html  a-week-in-webar-holiday-2020-edition-westfield-malls-the-good-crisp-company-patron-and-dior.html  a-week-in-webar-hologram-edition.html  a-week-in-webar-lego-masters-builder-dior-and-1917.html  a-week-in-webar-londons-waterloo-station-porsche-clarins-eva-air-and-a-spider-man-far-from-home.html  a-week-in-webar-netflix-cursed-siduri-wines-muller-milchreis.html  a-week-in-webar-new-activations-by-shaun-the-sheep-lego-toyota-and-heineken.html  a-week-in-webar-nike-lego-and-mcdonalds-sweden.html  a-week-in-webar-nike-new-zealand-stoneleigh-wine-and-sberbank-of-russia.html  a-week-in-webar-pink-floyd-jergens-and-bbc-americas-doctor-who.html  a-week-in-webar-porsche-saatchi-art-burger-king-uk.html  (+367 more)
bootstrap/: bootstrap.sh  update_token.sh
bzl/: PRESUBMIT.json  bzl-ci.yml  ci.yml
bzl/cargo/ring/: BUILD  Cargo.toml
c8/: BUILD  PRESUBMIT  cblas.h
c8/html-shell-tauri/: .gitignore  BUILD  Cargo.toml  README.md  tauri.conf.json  try_catch.m
c8/html-shell-tauri/capabilities/: default.json
c8/html-shell-tauri/plugins/tauri-plugin-native-app-export/: .gitignore  BUILD  api-iife.ts  build.rs
c8/html-shell-tauri/plugins/tauri-plugin-native-app-export/ios/: Package.swift
c8/html-shell-tauri/plugins/tauri-plugin-native-app-export/ios/Sources/: NativeAppExport.swift  VibrationManager.swift
c8/html-shell-tauri/plugins/tauri-plugin-native-app-export/permissions/: default.toml
c8/html-shell-tauri/plugins/tauri-plugin-native-app-export/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs
c8/html-shell-tauri/src/: lib.rs  main.rs
c8/html-shell-tauri/src/c8/: dev_cookie.rs  dev_cookie_test.rs  info_plist.rs  mod.rs  nae_protocol.rs  nae_protocol_test.rs  path_helpers.rs  shell_app_state.rs  verify_xrweb_code.rs
ci-support/: BUILD  README.md  build-mr-ci.yml  build-mr.py  cancel_pipeline_if_no_commits.py  ci.yml  eslint-ci.yml  (+18 more)
(+12152 files in other folders)
