[package]
name = "lazel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-process = "2.2.3"
gpui = { git = "https://github.com/zed-industries/zed" }
rust-embed = "8.5.0"


[[bin]]
name = "lazel"
path = "lazel.rs"
